Resolves: tdf#102286 lets not crash on null pFrame

this is the FlyEmbeddedPrt case

ensure we don't end up with a null pFrame at return time

(cherry picked from commit 5ce387c4812466e6752b434cf0f5a54f98c6a147)

Change-Id: I68ff6f0a36462cffc47d774865e69041c4dd15a8